--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>My Prrofile</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <header></header>
+    <section>
+        <div></div>
+    </section>
+    <footer>
+        
+    </footer>
 </body>
 </html>
